<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/hinhtron"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbLop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/java"
            android:gravity="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbTensv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_xu_n_sinh"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgGioitinh"
                android:layout_width="54dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon_male_64"
                android:textColor="#FF0000"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbNgaysinh"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2001_01_20"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lbSdt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0987654321"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lbEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/abc_gmail_com"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>